[project]
name = "writing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "wikipedia>=1.4.0",
]
